<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/playlistImageView"
        android:layout_width="@dimen/margin_72"
        android:layout_height="@dimen/margin_72"
        android:contentDescription="@string/image_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/playlistImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/playlistNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:textSize="@dimen/text_14"
            android:textColor="@color/white"
            android:text="@string/playlist_name"/>

        <TextView
            android:id="@+id/playlistOwnerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:textSize="@dimen/text_12"
            android:textColor="@color/white"
            android:text="@string/owner"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
