<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.createplaylist.CreatePlaylistActivity">

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="@dimen/margin_32"
        android:layout_height="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:src="@drawable/ic_x"
        android:contentDescription="@string/close_buttom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createPlaylistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:text="@string/insert_name_your_playlist_title"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_medium"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/playlistNameEditText"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:autofillHints="username"
        android:hint="@string/insert_name_your_playlist"
        android:gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/gray"
        android:fontFamily="@font/rubik_bold"
        android:textSize="@dimen/text_24"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createPlaylistTextView"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/creat_your_playlist_button"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/rubik_bold"
        android:textSize="@dimen/text_16"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/playlistNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
