<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/black"
    android:padding="@dimen/margin_8">

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="@dimen/margin_100"
        android:layout_height="@dimen/margin_100"
        android:background="@color/transparent"
        tools:src="@drawable/ic_spotify_full"
        android:contentDescription="@string/imagem_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/albumCover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:textSize="@dimen/text_14"
            android:layout_marginEnd="@dimen/margin_12"
            android:textColor="@color/white"
            android:text="@string/album_name"/>

        <TextView
            android:id="@+id/albumReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:textSize="@dimen/text_12"
            android:textColor="@color/white"
            android:text="@string/release_date"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
